--- a/PollFiction.Web/appsettings.Development.json
+++ b/PollFiction.Web/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "cn": "Server=tcp:pollfiction-project.database.windows.net,1433;Initial Catalog=PollFictionBdd;Persist Security Info=False;User ID=pollfiction;Password=fiction@2022;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
