--- a/PollFiction.Services/PollFiction.Services.csproj
+++ b/PollFiction.Services/PollFiction.Services.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PollFiction.Data\PollFiction.Data.csproj" />
   </ItemGroup>
 
