--- a/PollFiction.Web/PollFiction.Web.csproj
+++ b/PollFiction.Web/PollFiction.Web.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\images\delete48.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.15">
       <PrivateAssets>all</PrivateAssets>
@@ -17,5 +21,12 @@
   <ItemGroup>
     <ProjectReference Include="..\PollFiction.Services\PollFiction.Services.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="wwwroot\images\delete48.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 
 </Project>
