--- a/PollFiction.Web/appsettings.Development.json
+++ b/PollFiction.Web/appsettings.Development.json
@@ -5,7 +5,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Information",
+      "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
